Fix namespacing of form variables in bedrock imports

--- a/media/css/newsletter/newsletter-management.scss
+++ b/media/css/newsletter/newsletter-management.scss
@@ -26,7 +26,7 @@ main {
     }
 
     .mzp-c-field {
-        padding-bottom: $label-v-spacing;
+        padding-bottom: form.$label-v-spacing;
     }
 }
 
