--- a/media/css/newsletter/newsletter-recovery.scss
+++ b/media/css/newsletter/newsletter-recovery.scss
@@ -12,7 +12,7 @@
 
 .newsletter-recovery-form {
     .mzp-c-field {
-        padding-bottom: $label-v-spacing;
+        padding-bottom: form.$label-v-spacing;
     }
 
     .mzp-c-form-errors {
